workshop4/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tammy-mini-io-svc
  namespace: tammy-mini-io
spec:
  type: ClusterIP
  selector:
    app: mini-io
  ports:
  - name: server-port
    port: 9000
    targetPort: 9000
  - name: web-console
    port: 9090
    targetPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: tammy-mini-io-headless-svc
  namespace: tammy-mini-io
spec:
  clusterIP: None
  selector:
    app: mini-io
  ports:
  - name: server-port
    port: 9000
    targetPort: 9000
  - name: web-console
    port: 9090
    targetPort: 9090
